--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_multilateral_org_year.jrxml
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_multilateral_org_year.jrxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" whenNoDataType="AllSectionsNoDetail" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" language="groovy" pageWidth="555" pageHeight="842" columnWidth="555" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="4d81083f-52a3-45df-97af-b93a485e497a">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" whenNoDataType="AllSectionsNoDetail" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" language="java" pageWidth="555" pageHeight="842" columnWidth="555" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="4d81083f-52a3-45df-97af-b93a485e497a">
 	<property name="ireport.callouts" value="##Mon Dec 30 08:46:00 ART 2013"/>
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<parameter name="FIRST_YEAR" class="java.lang.String"/>
-	<parameter name="SECOND_YEAR" class="java.lang.String"/>
+	<parameter name="FIRST_YEAR" class="java.lang.Number"/>
+	<parameter name="SECOND_YEAR" class="java.lang.Number"/>
 	<parameter name="SUBDIR_PATH" class="java.lang.String"/>
 	<queryString language="mdx">
 		<![CDATA[
@@ -170,14 +170,14 @@ WHERE {[Reporting Year].[$P{FIRST_YEAR}]}*{[BiMultilateral].[BI_MULTILATERAL##2]
 				<subreportParameter name="MONDRIAN_CONNECTION">
 					<subreportParameterExpression><![CDATA[$P{MONDRIAN_CONNECTION}]]></subreportParameterExpression>
 				</subreportParameter>
-				<subreportExpression><![CDATA[JasperCompileManager.compileReport($P{SUBDIR_PATH} + "/aq_master_multilateral_org_year_b.jrxml")]]></subreportExpression>
+				<subreportExpression><![CDATA[$P{SUBDIR_PATH} + "/aq_master_multilateral_org_year_b.jasper"]]></subreportExpression>
 			</subreport>
 			<textField>
 				<reportElement x="352" y="0" width="100" height="14" uuid="9c6b15a8-1b92-4bb5-8754-3cc4f9bb4214"/>
 				<textElement textAlignment="Right">
 					<font fontName="Arial"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{ONU}+$F{EU}+$F{WB}+$F{GRP1}+$F{OTHER}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{ONU}.intValue() + $F{EU}.intValue() + $F{WB}.intValue() + $F{GRP1}.intValue() + $F{OTHER}.intValue()]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
