--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/PersistedUserTableListPanel.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/PersistedUserTableListPanel.html
@@ -15,7 +15,7 @@
         	<thead>
 	           <tr>
 	               <th><wicket:message key="user.name"/></th>
-				   <th><wicket:message key="groups"/></th>	               	           	    
+				   <th><wicket:message key="group"/></th>	               	           	    
 	               <th><wicket:message key="authorities"/></th>	               
 	           </tr>
 
@@ -25,7 +25,7 @@
 				<a wicket:id="linkToEditUser"/>
 				</td>
 				<td>
-					<span wicket:id="groups">-1</span>
+					<span wicket:id="group">-1</span>
 				</td>
 				<td>
 					<span wicket:id="authorities">-1</span>
