--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_memo_debtrelief_year_b.jrxml
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_memo_debtrelief_year_b.jrxml
@@ -7,7 +7,7 @@
 	<parameter name="YEAR" class="java.lang.Number"/>
 	<queryString language="mdx">
 		<![CDATA[SELECT
-NON EMPTY {[Type of Finance Root].[TYPE_OF_FINANCE##100]} ON ROWS,
+{[Type of Finance Root].[TYPE_OF_FINANCE##100]} ON ROWS,
 NON EMPTY {[Measures].[Commitments Amount]} ON COLUMNS
 FROM [Financial]
 WHERE {[Reporting Year].[$P{YEAR}]}*{[Type of Aid].[F]}]]>
