--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/application.css
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/application.css
@@ -38,3 +38,34 @@ select, input[type="text"], input[type="password"], input[type="datetime"], inpu
     text-align: center;
     text-shadow: 0 1px 3px rgba(0, 0, 0, 0.4), 0 0 30px rgba(0, 0, 0, 0.075);
 }
+
+html,
+body {
+margin:0;
+padding:0;
+height:100%;
+}
+
+#wrapper {
+min-height:100%;
+position:relative;
+}
+
+#content {
+padding:10px;
+padding-bottom:90px; /* Height of the footer element */
+}
+
+#footer {
+width:100%;
+height:90px;
+position:absolute;
+bottom:0;
+left:0;
+font-size: smaller;
+line-height: 95%;
+color: gray;
+background-color: #F5F5F5;
+border-top: 1px solid #E5E5E5;
+padding: 5px 0;
+}
