--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_bilateral_tof_year_b.jrxml
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_bilateral_tof_year_b.jrxml
@@ -28,28 +28,28 @@ WHERE {[Reporting Year].[$P{YEAR}]}*{[BiMultilateral].[BI_MULTILATERAL##1]}
 	</background>
 	<pageHeader>
 		<band height="56" splitType="Stretch">
-			<textField>
+			<textField pattern="#,##0.00" isBlankWhenNull="true">
 				<reportElement x="0" y="0" width="100" height="14" uuid="d6692bea-e609-43b5-a08a-3169cc4aa170"/>
 				<textElement textAlignment="Right">
 					<font fontName="Arial"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{Grant}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{Grant}.doubleValue()/1000000]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField pattern="#,##0.00" isBlankWhenNull="true">
 				<reportElement x="0" y="28" width="100" height="14" uuid="406d03b2-5be1-44be-98b6-02aacd9fed20"/>
 				<textElement textAlignment="Right">
 					<font fontName="Arial"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{Loan Gross}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{Loan Gross}.doubleValue()/1000000]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField pattern="#,##0.00" isBlankWhenNull="true">
 				<reportElement x="0" y="42" width="100" height="14" uuid="c9e230c0-6f23-44e2-abd4-299d8b1e2f4e"/>
 				<textElement textAlignment="Right">
 					<font fontName="Arial"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{Loan Net}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{Loan Net}.doubleValue()/1000000]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField pattern="#,##0.00" isBlankWhenNull="true">
 				<reportElement x="0" y="14" width="100" height="14" uuid="4549f8f0-fd13-4a73-a5d9-980c2dd11f07"/>
 				<textElement textAlignment="Right">
 					<font fontName="Arial"/>
